--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://bitbucket.org/mendelu/wa_ls2021_xdohna10#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
+    "jsonwebtoken": "^8.5.1",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   }
