--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://bitbucket.org/mendelu/wa_ls2021_xdohna10#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
