--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "pinia": "^2.0.11",
+    "sass": "^1.50.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
