--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "pinia": "^2.0.11",
     "sass": "^1.50.0",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-select": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.25",
+    "@types/vue-select": "^3.16.0",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/tsconfig": "^0.1.3",
     "typescript": "~4.5.5",
