--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.11",
     "sass": "^1.50.0",
